# uni-project-imdb-crawler

./: .env  .env.example  .gitignore  ex01.py  main.py  model.py  pyproject.toml
db/: mongo.py
imdb/: reviews.py
models/: model.py
provider/: db_provider.py
