[tool.poetry]
name = "imdb-crawl"
version = "0.1.0"
description = ""
authors = ["jnelle <602579@fom-net.de>", "Nilssteinmeyer <Steinmeyer.nils@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.1"
selenium = "^4.5.0"
Scrapy = "^2.7.0"
pydantic = "^1.10.2"
motor = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
